--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,11 +9,17 @@ spring.jpa.hibernate.ddl-auto=create
 
 server.port=8084
 
-login.url.path=/users/login
-
 #kafka
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 #spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+#redis
+redis.host=localhost
+redis.port=6379
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
+#spring.data.redis.password=123
+#spring.data.redis.username=test
 
