--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
             <version>4.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
